<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ItemsListActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/appleButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="groceryItemsButtonClicked"
            android:text="@string/apple" />

        <Button
            android:id="@+id/bananaButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="groceryItemsButtonClicked"
            android:text="@string/banana" />

        <Button
            android:id="@+id/orangeButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="groceryItemsButtonClicked"
            android:text="@string/orange" />

        <Button
            android:id="@+id/cherryButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="groceryItemsButtonClicked"
            android:text="@string/cherry" />

        <Button
            android:id="@+id/grapeButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="groceryItemsButtonClicked"
            android:text="@string/grape" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>